[metadata]
name            = pylinx
author          = Benedek Racz
author-email    = betontalpfa@gmail.com
summary         = Python wrapper for Xilinx tools
description-file = README.md
long-description-content-type = text/markdown
requires-python = >=3.4
project_urls =
    Source Code = https://github.com/raczben/pylinx
license = MIT
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    FPGA, Xilinx, Vivado, SDK, XSDK, scripting, automation, expect, pexpect, wexpect

[options.extras_require]
test =
    coverage
    tox
    setuptools>=38.0
    codecov
    twine
